; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_item_default_data_addref.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_item_default_data_addref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_data_item = type { i64, i32 }

@OBS_DATA_OBJECT = common dso_local global i64 0, align 8
@OBS_DATA_ARRAY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.obs_data_item*)* @item_default_data_addref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @item_default_data_addref(%struct.obs_data_item* %0) #0 {
  %2 = alloca %struct.obs_data_item*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store %struct.obs_data_item* %0, %struct.obs_data_item** %2, align 8
  %5 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  %6 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %33

10:                                               ; preds = %1
  %11 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  %12 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @OBS_DATA_OBJECT, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %10
  %17 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  %18 = call i32* @get_item_default_obj(%struct.obs_data_item* %17)
  store i32* %18, i32** %3, align 8
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @obs_data_addref(i32* %19)
  br label %33

21:                                               ; preds = %10
  %22 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  %23 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @OBS_DATA_ARRAY, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %32

27:                                               ; preds = %21
  %28 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  %29 = call i32* @get_item_default_array(%struct.obs_data_item* %28)
  store i32* %29, i32** %4, align 8
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @obs_data_array_addref(i32* %30)
  br label %32

32:                                               ; preds = %27, %21
  br label %33

33:                                               ; preds = %9, %32, %16
  ret void
}

declare dso_local i32* @get_item_default_obj(%struct.obs_data_item*) #1

declare dso_local i32 @obs_data_addref(i32*) #1

declare dso_local i32* @get_item_default_array(%struct.obs_data_item*) #1

declare dso_local i32 @obs_data_array_addref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
